# nl2bench

./: .flake8  .gitignore  Makefile  Readme.md  default.nix  flake.nix  pyproject.toml
.github/scripts/: generate_tag.py  gh.py
.github/workflows/: ci.yml
grammars/lib/: logic.g4
grammars/verilog/: VerilogParser.g4
nix/: libparse.nix
nl2bench/: __init__.py  __main__.py  cell.py  lib_fn_parser.py  nl2bench.py  nl_parser.py
test/: conftest.py  test_cell.py  test_nl2bench.py
test/designs/: test.v
test/designs/aes128/osu035/: nl.bench  nl.v
test/designs/s298/osu035/: nl.bench
test/designs/spm/osu035/: nl.bench  nl.v
